revise github action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,22 +3,20 @@ name: Build & Package File Renamer (Windows)
 on:
   push:
     tags:
-      - "v*.*.*"        # Build when you push a version tag (e.g., v1.0.0)
-  workflow_dispatch: {}  # Allow manual run from GitHub UI
+      - "v*.*.*"
+  workflow_dispatch: {}
 
 permissions:
-  contents: write        # Required to create releases
+  contents: write
 
 jobs:
   build-windows:
     runs-on: windows-latest
 
     steps:
-      # ---- Checkout repo ----
       - name: Checkout
         uses: actions/checkout@v4
 
-      # ---- Python + uv ----
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
@@ -27,17 +25,24 @@ jobs:
       - name: Set up uv
         uses: astral-sh/setup-uv@v3
 
-      # ---- Install dependencies ----
+      # Create a local virtual environment in the repo
+      - name: Create venv (.venv)
+        shell: pwsh
+        run: |
+          uv venv --python "$env:PythonLocation\python.exe"
+          Get-ChildItem .venv
+
+      # Install deps into .venv (note the -p .venv)
       - name: Install project dependencies
         shell: pwsh
         run: |
-          uv pip install PySide6 PySide6-Fluent-Widgets PySideSix-Frameless-Window pyinstaller
+          uv pip install -p .venv PySide6 PySide6-Fluent-Widgets PySideSix-Frameless-Window pyinstaller
 
-      # ---- Build PyInstaller EXE ----
+      # Build EXE using that venv
       - name: Build FileRenamer EXE
         shell: pwsh
         run: >
-          uv run pyinstaller --onefile --windowed
+          uv run -p .venv pyinstaller --onefile --windowed
           --name FileRenamer
           --hidden-import qfluentwidgets
           --hidden-import pyside6_frameless_window
@@ -45,14 +50,19 @@ jobs:
           --collect-all pyside6_frameless_window
           file_renamer.py
 
-      # ---- Install Inno Setup ----
+      - name: Verify EXE
+        shell: pwsh
+        run: |
+          if (-not (Test-Path "dist\FileRenamer.exe")) { throw "EXE not found" }
+          Get-ChildItem dist
+
+      # Install Inno and build installer
       - name: Install Inno Setup
         shell: pwsh
         run: |
           choco install innosetup --no-progress -y
           "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe" /?
 
-      # ---- Compile the Inno installer ----
       - name: Build Inno installer
         shell: pwsh
         run: |
@@ -60,7 +70,7 @@ jobs:
           & $iscc FileRenamer.iss /Qp
           Get-ChildItem installer
 
-      # ---- Upload artifacts ----
+      # Artifacts
       - name: Upload EXE artifact
         uses: actions/upload-artifact@v4
         with:
@@ -73,7 +83,7 @@ jobs:
           name: FileRenamer-Installer
           path: installer/**/*.exe
 
-      # ---- Optional: create GitHub Release on tag ----
+      # Release on tag
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
