--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,12 +56,11 @@ jobs:
           if (-not (Test-Path "dist\FileRenamer.exe")) { throw "EXE not found" }
           Get-ChildItem dist
 
-      # Install Inno and build installer
       - name: Install Inno Setup
         shell: pwsh
         run: |
           choco install innosetup --no-progress -y
-          "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe" /?
+          & "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe" --% /?
 
       - name: Build Inno installer
         shell: pwsh
