--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ name: Build & Release File Renamer (Windows)
 on:
   push:
     tags:
-      - "v*.*.*"          # run when you create a tag like v1.0.0
-  workflow_dispatch: {}    # manual run
+      - "v*.*.*"          # run when you push a tag like v1.0.0
+  workflow_dispatch: {}    # allow manual run
 
 permissions:
   contents: write          # needed to create releases
@@ -14,11 +14,11 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # 1) Checkout
+      # Checkout
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 2) Python + uv
+      # Python + uv
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
@@ -27,7 +27,7 @@ jobs:
       - name: Set up uv
         uses: astral-sh/setup-uv@v3
 
-      # 3) Create venv and install deps
+      # Create venv & install deps
       - name: Create venv (.venv)
         shell: pwsh
         run: |
@@ -39,7 +39,7 @@ jobs:
         run: |
           uv pip install -p .venv PySide6 PySide6-Fluent-Widgets PySideSix-Frameless-Window pyinstaller
 
-      # 4) Build EXE (AV-friendly flags)
+      # Build EXE (no signing; AV-friendly flags)
       - name: Build PyInstaller EXE
         shell: pwsh
         run: >
@@ -57,26 +57,7 @@ jobs:
           if (-not (Test-Path "dist\FileRenamer.exe")) { throw "EXE not found" }
           Get-ChildItem dist
 
-      # 5) (Optional) Code-sign the EXE if cert secrets are provided
-      #    Add these secrets in repo settings:
-      #    - CODESIGN_PFX  (base64 of your .pfx)
-      #    - CODESIGN_PWD  (password)
-      - name: Import code-signing cert
-        if: ${{ secrets.CODESIGN_PFX && secrets.CODESIGN_PWD }}
-        shell: pwsh
-        run: |
-          $bytes = [Convert]::FromBase64String("${{ secrets.CODESIGN_PFX }}")
-          [IO.File]::WriteAllBytes("codesign.pfx", $bytes)
-
-      - name: Sign EXE
-        if: ${{ secrets.CODESIGN_PFX && secrets.CODESIGN_PWD }}
-        shell: pwsh
-        run: |
-          $signtool = (Get-Command signtool.exe -ErrorAction Stop).Source
-          & $signtool sign /fd SHA256 /f codesign.pfx /p "${{ secrets.CODESIGN_PWD }}" `
-            /tr http://timestamp.digicert.com /td SHA256 dist\FileRenamer.exe
-
-      # 6) Install Inno Setup and build installer
+      # Install Inno & build installer
       - name: Install Inno Setup
         shell: pwsh
         run: |
@@ -85,20 +66,14 @@ jobs:
             throw "ISCC.exe not found after install"
           }
 
-      # If you want Inno to sign the installer, ensure your .iss has:
-      #   SignTool=signtool sign /fd SHA256 /f codesign.pfx /p $p /tr http://timestamp.digicert.com /td SHA256 $f
-      # and we pass env var p below when secrets exist.
       - name: Build Inno installer
         shell: pwsh
         run: |
           $iscc = "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe"
-          if ("${{ secrets.CODESIGN_PFX && secrets.CODESIGN_PWD }}" -ne "") {
-            $env:p = "${{ secrets.CODESIGN_PWD }}"
-          }
           & $iscc FileRenamer.iss /Qp
           Get-ChildItem installer
 
-      # 7) Upload artifacts to the workflow run (optional for debugging)
+      # Upload artifacts to the workflow run (optional but handy)
       - name: Upload EXE artifact
         uses: actions/upload-artifact@v4
         with:
@@ -113,7 +88,7 @@ jobs:
           path: installer/**/*.exe
           if-no-files-found: error
 
-      # 8) Create GitHub Release with raw installer.exe (no zip)
+      # Create GitHub Release and attach raw installer.exe (no zip)
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
