--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # Checkout
+      # 1) Checkout
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Python + uv
+      # 2) Python + uv
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
@@ -27,28 +27,27 @@ jobs:
       - name: Set up uv
         uses: astral-sh/setup-uv@v3
 
-      # Create venv & install deps
+      # 3) Create venv & install only what's needed
       - name: Create venv (.venv)
         shell: pwsh
         run: |
           uv venv --python "$env:PythonLocation\python.exe"
           Get-ChildItem .venv
 
-      - name: Install project dependencies
+      - name: Install dependencies
         shell: pwsh
         run: |
-          uv pip install -p .venv PySide6 PySide6-Fluent-Widgets PySideSix-Frameless-Window pyinstaller
+          uv pip install -p .venv PySide6 pyinstaller
 
-      # Build EXE (no signing; AV-friendly flags)
+      # 4) Build EXE (bundle your assets/)
+      # NOTE: Change entry script if your filename isn't file_renamer.py
       - name: Build PyInstaller EXE
         shell: pwsh
         run: >
           uv run -p .venv pyinstaller --onefile --windowed --noupx --clean
           --name FileRenamer
-          --hidden-import qfluentwidgets
-          --hidden-import pyside6_frameless_window
-          --collect-all qfluentwidgets
-          --collect-all pyside6_frameless_window
+          --icon assets/app.ico
+          --add-data "assets;assets"
           file_renamer.py
 
       - name: Verify EXE
@@ -57,7 +56,7 @@ jobs:
           if (-not (Test-Path "dist\FileRenamer.exe")) { throw "EXE not found" }
           Get-ChildItem dist
 
-      # Install Inno & build installer
+      # 5) Install Inno Setup & build installer
       - name: Install Inno Setup
         shell: pwsh
         run: |
@@ -66,6 +65,15 @@ jobs:
             throw "ISCC.exe not found after install"
           }
 
+      # If you keep FileRenamer.iss in the repo root, this just works.
+      # Otherwise, uncomment the next step to generate the .iss file dynamically.
+      # - name: Generate Inno Setup script
+      #   shell: pwsh
+      #   run: |
+      #     @'
+      #     # SEE TEMPLATE BELOW
+      #     '@ | Out-File -FilePath FileRenamer.iss -Encoding UTF8 -Force
+
       - name: Build Inno installer
         shell: pwsh
         run: |
@@ -73,7 +81,7 @@ jobs:
           & $iscc FileRenamer.iss /Qp
           Get-ChildItem installer
 
-      # Create GitHub Release and attach raw installer.exe (no zip)
+      # 6) Create GitHub Release and attach the installer .exe
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
